maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
var c:Int = 0
while(c != getMondeLargeur) {
	getDirection(NORTH)
	if(estFaceMur) {
		droite()
		avance()
		gauche()
	}
	avance()
}

while(!estSurBiscuit) {
		gauche()
		while(estFaceMur) {
			droite()
		}
		avance()
	}
	prendBiscuit()
}
